<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="64dp"
    tools:context=".WelcomePage">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_resto"
        android:contentDescription="@string/cd_first_image"
        />
    <TextView
        android:id="@+id/label_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/label_store"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        />
    <Spinner
        android:id="@+id/dropdown_store"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:entries="@array/store_options"
        />
    <TextView
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/label_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        />
    <EditText
        android:id="@+id/input_name"
        android:inputType="text"
        android:textColorHint="@color/dark_grey"
        android:autofillHints="name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:textSize="16sp"
        android:hint="@string/name_hint"
        />

    <Button
        android:id="@+id/submit_button"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_submit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/btn_square"
        android:paddingVertical="12dp"
        />
</LinearLayout>