<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderDetailsPage">

    <TextView
        android:id="@+id/order_title"
        android:textColor="@color/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_order_detail"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/name_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        app:layout_constraintTop_toBottomOf="@+id/order_title"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/label_od_nama"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingEnd="4dp" />

        <TextView
            android:id="@+id/user_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:textColorHint="@color/dark_grey"
            android:hint="@string/hint_name_of_customer"
            android:textSize="16sp"
            android:paddingStart="4dp"
            android:paddingEnd="8dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/store_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        app:layout_constraintTop_toBottomOf="@+id/name_info"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/label_od_store"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingEnd="4dp" />

        <TextView
            android:id="@+id/store_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:textColorHint="@color/dark_grey"
            android:hint="@string/hint_name_of_store"
            android:textSize="16sp"
            android:paddingStart="4dp"
            android:paddingEnd="8dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/order_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        app:layout_constraintTop_toBottomOf="@+id/store_info"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/label_od_order"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingEnd="4dp" />

        <TextView
            android:id="@+id/order_text"
            android:textColorHint="@color/dark_grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:hint="@string/hint_od_order"
            android:textSize="16sp"
            android:paddingStart="4dp"
            android:paddingEnd="8dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/price_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        app:layout_constraintTop_toBottomOf="@+id/order_info"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/label_od_price"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingEnd="4dp" />

        <TextView
            android:id="@+id/price_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:textColorHint="@color/dark_grey"
            android:hint="@string/hint_od_price"
            android:textSize="16sp"
            android:paddingStart="4dp"
            android:paddingEnd="8dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/delivery_title"
        android:textColor="@color/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_pengiriman"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/price_info"
        />

    <RadioGroup
        android:id="@+id/delivery_method_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/delivery_title">

        <RadioButton
            android:id="@+id/takeaway_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Takeaway" />

        <RadioButton
            android:id="@+id/delivery_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delivery" />
    </RadioGroup>

    <Button
        android:id="@+id/done_button"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        android:layout_marginVertical="32dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/btn_square"
        android:text="@string/btn_done"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/backhome_button"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        android:layout_marginVertical="32dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/btn_square"
        android:text="@string/btn_back_to_dashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/order_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_border"
        android:padding="12dp"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        android:layout_marginVertical="@dimen/VerticalMargin"
        android:textAlignment="center"
        android:justificationMode="inter_word"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:hint="@string/message_succes_order"
        app:layout_constraintBottom_toTopOf="@+id/backhome_button"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>