<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestoPage">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/up_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_user"
            android:contentDescription="@string/cd_icon_profile"
            />
        <TextView
            android:id="@+id/up_bar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello, Asep"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginHorizontal="12dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/img_resto_cihampeulas"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@+id/up_bar"
        android:contentDescription="@string/cd_image_restaurant"
        />
    <LinearLayout
        android:id="@+id/store_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        android:layout_marginVertical="@dimen/VerticalMargin"
        app:layout_constraintTop_toBottomOf="@+id/main_image">

        <TextView
            android:id="@+id/store_label"
            android:textColor="@color/text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/label_store_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="4dp" />

        <TextView
            android:id="@+id/store"
            android:textColor="@color/text_color"
            android:hint="@string/hint_name_of_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColorHint="@color/dark_grey"
            android:textSize="16sp"
            android:paddingStart="4dp"
            android:paddingEnd="8dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/location_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        android:layout_marginVertical="@dimen/VerticalMargin"
        app:layout_constraintTop_toBottomOf="@+id/store_info">

        <TextView
            android:id="@+id/location_label"
            android:textColor="@color/text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/label_location"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="4dp" />

        <TextView
            android:id="@+id/location_text"
            android:textColor="@color/text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:text="@string/label_find_on_maps"
            android:textSize="16sp"
            />
        <ImageView
            android:id="@+id/location_icon"
            android:textColor="@color/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/cd_icon_maps"/>
    </LinearLayout>
    <Button
        android:id="@+id/show_menu_button"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="@dimen/HorizontalMargin"
        android:layout_marginVertical="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_square"
        android:text="@string/btn_see_menus"/>

</androidx.constraintlayout.widget.ConstraintLayout>